--- a/index.html
+++ b/index.html
@@ -7,11 +7,15 @@
 <center>
 <h1> Bouncing Balls </h1>
 
-<canvas height="500" width="500" id="slate" style="border:1px solid #000000;">
+<canvas height="500" width="1000" id="slate" style="border:1px solid #000000;">
 </canvas>
 
 <br>
-<button id="add"> Add Ball </button>
+<button id="add1"> Add 1 Ball </button>
+<button id="add5"> Add 5 Balls </button>
+<button id="add10"> Add 10 Balls </button>
+<button id="remove"> Remove 1 Ball </button>
+<button id="clear"> Clear Balls </button
 </center>
 </body>
 
