--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 <button id="add5"> Add 5 Balls </button>
 <button id="add10"> Add 10 Balls </button>
 <button id="remove"> Remove 1 Ball </button>
-<button id="clear"> Clear Balls </button
+<button id="clear"> Clear Balls </button>
+<button id="slow"> Slow Balls </button>
 </center>
 </body>
 
