--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 <button id="add10"> Add 10 Balls </button>
 <button id="remove"> Remove 1 Ball </button>
 <button id="clear"> Clear Balls </button>
-<button id="slow"> Slow Balls </button>
+<button id="flock"> Flock </button>
+<button id="filter"> Filter Small </button>
 </center>
 </body>
 
